--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ strong {
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         max-width: 70px;
         padding-right: 1em;
+        text-align: center;
     }
 }
 
